--- a/CredentialsValidation.Web/CredentialsValidation.Web.csproj
+++ b/CredentialsValidation.Web/CredentialsValidation.Web.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="bootstrap" Version="4.6.0" />
+    <PackageReference Include="jQuery" Version="3.6.0" />
+  </ItemGroup>
+
 </Project>
