--- a/CredentialsValidation.Web/CredentialsValidation.Web.csproj
+++ b/CredentialsValidation.Web/CredentialsValidation.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,11 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.6.0" />
     <PackageReference Include="jQuery" Version="3.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CredentialsValidation.Abstractions\CredentialsValidation.Abstractions.csproj" />
+    <ProjectReference Include="..\CredentialsValidation.Shared\CredentialsValidation.Shared.csproj" />
   </ItemGroup>
 
 </Project>
