--- a/CredentialsValidation.Web/appsettings.json
+++ b/CredentialsValidation.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "myConfiguration": {
+    "WebAPIBaseURL": "http://localhost:50898/"
+  }
 }
