Refined client side code Web can now call the back-end WebAPI Added Validator to do the actual validation

--- a/CredentialsValidation.WebAPI/CredentialsValidation.WebAPI.csproj
+++ b/CredentialsValidation.WebAPI/CredentialsValidation.WebAPI.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CredentialsValidation.Abstractions\CredentialsValidation.Abstractions.csproj" />
+    <ProjectReference Include="..\CredentialsValidation.Shared\CredentialsValidation.Shared.csproj" />
+  </ItemGroup>
+
 
 </Project>
