--- a/CredentialsValidation.WebAPI/CredentialsValidation.WebAPI.csproj
+++ b/CredentialsValidation.WebAPI/CredentialsValidation.WebAPI.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CredentialsValidation.Abstractions\CredentialsValidation.Abstractions.csproj" />
+    <ProjectReference Include="..\CredentialsValidation.Database.Abstractions\CredentialsValidation.Database.Abstractions.csproj" />
+    <ProjectReference Include="..\CredentialsValidation.Database\CredentialsValidation.Database.csproj" />
     <ProjectReference Include="..\CredentialsValidation.Shared\CredentialsValidation.Shared.csproj" />
   </ItemGroup>
 
