--- a/CredentialsValidation.WebAPI/appsettings.json
+++ b/CredentialsValidation.WebAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Database=SqlDb",
+    "OracleDb": "Data Source=(localdb)\\OracleDB;Initial Catalog=master;Integrated Security=True;Database=OracleDb"
+  }
 }
